--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,9 @@
-*.iml
-.gradle
+/*.iml
+/.gradle/
+/.idea/
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+/*/build
+/*/*.iml
+/zhenhun.iml
+/app/.DS_Store
 .DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
