--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
-/*.iml
-/.gradle/
-/.idea/
-/local.properties
-/*/build
-/*/*.iml
-/zhenhun.iml
-/app/.DS_Store
+*.iml
+*.bat
+*.apk
+# 自定义了local.properties的请删除这条
+local.properties
+/captures
+~$*
+gradlew
 .DS_Store
+.idea
+.gradle
+gradle
+build
